kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: web
spec:
  replicas: 3
  selector:
     matchLabels:
       app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 100%     
  template:
     metadata:
      labels:
       app: web
     spec:
      containers:
      - name: web
        image: impel1o/web-pod:v0.1
        readinessProbe:
          httpGet:
           path: /index.html
           port: 8000
        livenessProbe:
         tcpSocket: 
            port: 8000
        resources:
         limits:
          memory: "128Mi"
          # cpu: "500m"
        volumeMounts:
         - name: app
           mountPath: /app   
      volumes:
        - name: app
          emptyDir: {}
