kubernetes-networks/web-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web
  type: ClusterIP  
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
