kubernetes-networks/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
   - http:
       paths:
       - path: /dashboard(/|$)(.*)
         backend:
           serviceName: kubernetes-dashboard
           servicePort: 9090
