kubernetes-networks/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: express.softpro.site
     http:
       paths:
       - path: /web
         backend:
           serviceName: web-svc
           servicePort: 8000
